created forms to create or update patient, physician, and appointment.

--- a/ClinicPoint/Views/Patients/Index.cshtml
+++ b/ClinicPoint/Views/Patients/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Patients</h2>
 
 <p>
-    @Html.ActionLink("New Patient", "New", "Customers", null, new { @class = "btn btn-primary" } )
+    @Html.ActionLink("New Patient", "New", "Patients", null, new { @class = "btn btn-primary" } )
 </p>
 
 <table id="patients" class="table table-bordered table-hover" >
