--- a/ClinicPoint/Views/Shared/_NavBar.cshtml
+++ b/ClinicPoint/Views/Shared/_NavBar.cshtml
@@ -10,9 +10,9 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Appointments", "Index", "Appointment")</li>
-                <li>@Html.ActionLink("Patients", "Index", "Patient")</li>
-                <li>@Html.ActionLink("Physicians ", "Index", "Physician")</li>
+                <li>@Html.ActionLink("Appointments", "Index", "Appointments")</li>
+                <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
+                <li>@Html.ActionLink("Physicians ", "Index", "Physicians")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
