--- a/ClinicPoint/Views/Appointments/Index.cshtml
+++ b/ClinicPoint/Views/Appointments/Index.cshtml
@@ -68,7 +68,7 @@
                     {
                         data: "id",
                         render: function (data, type, appointment) {
-                            return "<a href='/appointment/edit/" + appointment.id + "'>Edit</a>";
+                            return "<a href='/appointments/edit/" + appointment.id + "'>Edit</a>";
                         }
                     },
                     {
@@ -86,7 +86,7 @@
                 bootbox.confirm("Are you sure you want to delete this appointment?", function (result) {
                     if (result) {
                         $.ajax({
-                            url: "/api/appointment/" + button.attr("data-appointment-id"),
+                            url: "/api/appointments/" + button.attr("data-appointment-id"),
                             method: "DELETE",
                             success: function () {
                                 table.row(button.parents("tr")).remove().draw();
