added date picker to appointment form and fixed date formatting issue on appointment index page and appointment, patient, and physician forms

--- a/ClinicPoint/Views/Appointments/Index.cshtml
+++ b/ClinicPoint/Views/Appointments/Index.cshtml
@@ -56,7 +56,7 @@
                     {
                         data: "date",
                         render: function (data, type, appointment) {
-                            return appointment.date;
+                            return $.datepicker.formatDate('mm/dd/yy', new Date(appointment.date.toString()));
                         }
                     },
                     {
