--- a/ClinicPoint/Views/Appointments/AppointmentForm.cshtml
+++ b/ClinicPoint/Views/Appointments/AppointmentForm.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(a => a.Appointment.Date)
-        @Html.TextBoxFor(a => a.Appointment.Date, "{0:d MM YYYY}", new { @class = "form-control" })
+        @Html.TextBoxFor(a => a.Appointment.Date, "{0:MM/dd/yyyy}", new { @class = "form-control", id = "datepicker"})
         @Html.ValidationMessageFor(a => a.Appointment.Date)
     </div>
     <div class="form-group">
@@ -38,4 +38,13 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
+    
+    <script>
+        $(document).ready(function() {
+            $("#datepicker").datepicker({ minDate: 0 });;
+        });
+        
+    </script>
+    
+
 }
