--- a/ClinicPoint/Views/Patients/PatientForm.cshtml
+++ b/ClinicPoint/Views/Patients/PatientForm.cshtml
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(p => p.Patient.Birthdate)
-        @Html.TextBoxFor(p => p.Patient.Birthdate, "{0:d MM YYYY}", new { @class = "form-control" })
+        @Html.TextBoxFor(p => p.Patient.Birthdate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
         @Html.ValidationMessageFor(p => p.Patient.Birthdate)
     </div>
     <div class="form-group">
