--- a/ClinicPoint/Views/Appointments/AppointmentForm.cshtml
+++ b/ClinicPoint/Views/Appointments/AppointmentForm.cshtml
@@ -13,7 +13,7 @@
         @Html.LabelFor(a => a.Patients)
         @Html.DropDownListFor(a => a.Appointment.PatientId, new SelectList(Model.Patients, "Id", "FullName"), "Select Patient", new { @class = "form-control" })
         @Html.ValidationMessageFor(a => a.Appointment.Patient)
-    </div> 
+    </div>
     <div class="form-group">
         @Html.LabelFor(a => a.Physicians)
         @Html.DropDownListFor(a => a.Appointment.PhysicianId, new SelectList(Model.Physicians, "Id", "FullName"), "Select Physician", new { @class = "form-control" })
@@ -21,12 +21,17 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(a => a.Appointment.Date)
-        @Html.TextBoxFor(a => a.Appointment.Date, "{0:MM/dd/yyyy}", new { @class = "form-control", id = "datepicker"})
+        @Html.TextBoxFor(a => a.Appointment.Date, "{0:MM/dd/yyyy}", new { @class = "form-control", id = "datepicker" })
         @Html.ValidationMessageFor(a => a.Appointment.Date)
     </div>
-    <div class="form-group">
+/*    <div class="form-group">
         @Html.LabelFor(a => a.Appointment.Time)
         @Html.TextBoxFor(a => a.Appointment.Time, new { @class = "form-control" })
+        @Html.ValidationMessageFor(a => a.Appointment.Time)
+    </div>*/
+    <div class="form-group">
+        @Html.LabelFor(a => a.Appointment.Time)
+        @Html.DropDownListFor(a => a.Appointment.Time, Enumerable.Empty<SelectListItem>(), "Select Time Slot", new { @class = "form-control", id = "timeslot" })
         @Html.ValidationMessageFor(a => a.Appointment.Time)
     </div>
     @Html.HiddenFor(a => a.Appointment.Id)
@@ -38,13 +43,63 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
-    
+
     <script>
-        $(document).ready(function() {
-            $("#datepicker").datepicker({ minDate: 0 });;
+        $(document).ready(function () {
+            //add appointment time to dropdown list and set it as the selected time
+            $("#timeslot").append($("<option></option>").html("@Model.Appointment.Time"));
+            $("#timeslot").val("@Model.Appointment.Time");
+
+            $("#datepicker").datepicker({
+                minDate: 0,
+                onSelect: function() {
+                    //generate time slots when date changes
+                    generateTimeSlots();
+                }
+            });;
+
+            //generate time slots
+            function generateTimeSlots() {
+                $("#timeslot").empty();
+                $("#timeslot").append($("<option></option>").html("Select Time Slot"));
+                var startTime = 8;
+                var endTime = 16;
+                var interval = "00";
+                var timeString = "";
+                var timeOfDay = "AM";
+                var hour;
+                var timeSlots = [];
+
+                for (var i = startTime; i <= endTime; i++) {
+                    hour = i;
+                    if (hour > 11) {
+                        timeOfDay = "PM";
+                        if (hour > 12) {
+                            hour = hour - 12;
+                        }
+                    }
+                    timeString = hour + ":" + interval + " " + timeOfDay;
+                    if (interval == "00") {
+                        interval = "30";
+                        i--;
+                    } else {
+                        interval = "00";
+                    }
+                    timeSlots.push(timeString);
+                }
+                //TODO: get appointments from db and remove for timeslot array 
+                //where times matches(no physician should have two appointments on the same day and time)
+
+            
+                for (var j = 0; j < timeSlots.length; j++) {
+                    $("#timeslot").append($("<option></option>").html(timeSlots[j]));
+                        
+                }
+                $("#timeslot").val("@Model.Appointment.Time");
+            };
         });
-        
+
     </script>
-    
+
 
 }
